# WhimprFlow

./: Cargo.toml  LICENSE  README.md  dev.sh
.github/workflows/: build-macos.yml
crates/whimpr-asr/: Cargo.toml
crates/whimpr-asr/examples/: transcribe.rs
crates/whimpr-asr/src/: lib.rs
crates/whimpr-audio/: Cargo.toml
crates/whimpr-audio/src/: lib.rs
crates/whimpr-cleanup/: Cargo.toml
crates/whimpr-cleanup/examples/: clean.rs
crates/whimpr-cleanup/src/: lib.rs
crates/whimpr-core/: Cargo.toml
crates/whimpr-core/src/: lib.rs  settings.rs  stats.rs  types.rs
crates/whimpr-core/src/asr/: mod.rs
crates/whimpr-core/src/cleanup/: gates.rs  levels.rs  mod.rs  prompts.rs
crates/whimpr-core/src/dictionary/: mod.rs
crates/whimpr-core/src/state/: actions.rs  events.rs  machine.rs  mod.rs  timing.rs
crates/whimpr-ipc/: Cargo.toml
crates/whimpr-ipc/src/: codec.rs  lib.rs
crates/whimpr-llm-worker/: Cargo.toml
crates/whimpr-llm-worker/src/: main.rs
crates/whimpr-sidecar/: Cargo.toml
crates/whimpr-sidecar/src/: main.rs
docs/: ARCHITECTURE-DUAL-PLATFORM.md  BUILD-STATUS.md  SPEC.md
docs/research/: app-teardown.md  cleanup-llm-and-api.md  cleanup-prompting.md  edit-behavior.md  feature-inventory.md  gap-asr-engine-mac-latency.md  gap-auto-learned-dictionary.md  gap-model-verification.md  gap-sidecar-vs-inprocess.md  gap-tauri-vs-electron-overlay.md  gap-temporal-behavior.md  hotkeys-interaction.md  local-asr.md  mac-gap-critic.md  macos-architecture.md  oss-clones.md  stack-decision.md  ui-flow-bar.md  win-gap-critic.md  win-hotkeys.md  win-insertion.md  win-llm.md  win-shell.md  win-teardown.md  xplat-asr.md
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: appctx.rs  autolearn.rs  hotkey.rs  lib.rs  local_llm.rs  main.rs  paste.rs  win.rs
ui/: index.html  overlay.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/hub/: App.tsx  ComingSoon.tsx  DictionaryPane.tsx  Help.tsx  Home.tsx  Insights.tsx  Onboarding.tsx  SettingsPane.tsx  Sidebar.tsx  api.ts  format.ts  icons.tsx  main.tsx  theme.ts  ui.tsx
ui/src/overlay/: FlowBar.tsx  main.tsx
ui/src/tokens/: values.ts
