[package]
name = "whimpr-cleanup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Cloud cleanup providers implementing whimpr-core's CleanupProvider trait.
# OpenAI (default cloud) today; Anthropic and local llama layer in behind the trait.
[dependencies]
whimpr-core = { path = "../whimpr-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
